--- a/paper-1.16.3.jar.conf
+++ b/paper-1.16.3.jar.conf
@@ -6,7 +6,7 @@
 [config]
 name = Paper 1.16.3 - 209
 source = http://papermc.io/ci/job/Paper-1.16/209/artifact/paperclip-209.jar
-configSource = http://raw.githubusercontent.com/jrcharland/MultiCraft-Conf/paper-1.16.3.jar.conf
+configSource = https://raw.githubusercontent.com/jrcharland/MultiCraft-Conf/main/paper-1.16.3.jar.conf
 
 
 [encoding]
