--- a/paper-1.16.3.jar.conf
+++ b/paper-1.16.3.jar.conf
@@ -4,8 +4,8 @@
 ## ===========================================================
 
 [config]
-name = Paper 1.16.5 - 444
-source = http://papermc.io/ci/job/Paper-1.16/444/artifact/paperclip-444.jar
+name = Paper 1.16.5
+source = https://papermc.io/ci/job/Paper-1.16/lastSuccessfulBuild/artifact/paperclip.jar
 configSource = https://raw.githubusercontent.com/jrcharland/MultiCraft-Conf/main/paper-1.16.3.jar.conf
 
 [encoding]
