--- a/paper-1.16.3.jar.conf
+++ b/paper-1.16.3.jar.conf
@@ -4,9 +4,10 @@
 ## ===========================================================
 
 [config]
-name = Paper 1.16.5
-source = https://papermc.io/ci/job/Paper-1.16/lastSuccessfulBuild/artifact/paperclip.jar
+name = Paper 1.16.3 - 231
+source = http://papermc.io/ci/job/Paper-1.16/231/artifact/paperclip-231.jar
 configSource = https://raw.githubusercontent.com/jrcharland/MultiCraft-Conf/main/paper-1.16.3.jar.conf
+
 
 [encoding]
 encode = utf-8
