Update and rename paper-1.16.3.jar.conf to paper-1.16.jar.conf

--- a/paper-1.16.jar.conf
+++ b/paper-1.16.jar.conf
@@ -4,20 +4,17 @@
 ## ===========================================================
 
 [config]
-name = Paper 1.16.3 - 231
-source = http://papermc.io/ci/job/Paper-1.16/231/artifact/paperclip-231.jar
-configSource = https://raw.githubusercontent.com/jrcharland/MultiCraft-Conf/main/paper-1.16.3.jar.conf
-
+name = Paper 1.16-latest
+source = https://papermc.io/ci/job/Paper-1.16/lastSuccessfulBuild/artifact/paperclip.jar
+configSource = https://raw.githubusercontent.com/jrcharland/MultiCraft-Conf/main/paper-1.16.jar.conf
 
 [encoding]
 encode = utf-8
 decode = utf-8
 fileEncoding = latin-1
 
-
 [start]
 command = "{JAVA}" -server -Xmx{MAX_MEMORY}M -Xms{START_MEMORY}M -Djline.terminal=jline.UnsupportedTerminal -jar "{JAR}" nogui {PARAMS}
-
 
 [force_config]
 configFile = server.properties
@@ -29,15 +26,12 @@ replace2 = server-port={PORT}
 search3 = max-players
 replace3 = max-players={MAX_PLAYERS}
 
-
 [parse_log]
 start=^(?P<time>(:?[-\d]+ )?\[?[:\d]+\]?)\s+\[?(?P<type>[^]<>]+)[\]>]\:?\s+(:?\[(:?Minecraft-)?(:?Server)\]\s+)?(?P<line>.*)$
-
 
 [parse_startup]
 start=^\s*Done
 important=true
-
 
 [parse_players]
 listSplit=\s*,\s*
@@ -51,22 +45,18 @@ isList=true
 maxLines=2
 maxDataLines=0
 
-
 [parse_chat]
 start=^(?P<source>\[[^\]]+\])?\s*<(?P<sender>[^>]*)>\s*(?P<message>.*)$
-
 
 [parse_command]
 shortStart=(?:tried|issued server) command
 start=^(?P<sender>.+)\s(?:tried|issued\sserver)\scommand:\s*(?P<command>.*)$
 important=true
 
-
 [parse_connect]
 shortStart=logged in with entity id \d+ at
 start=^(?P<name>.+?)\s*\[/(?P<ip>[^\]:]*)(:?(?P<port>[0-9]+)?)\]\s*logged in
 start1=^(?P<name>.+)(?P<ip>\s+)logged in
-
 
 [parse_disconnect]
 shortStart=(lost connection|Kick(ing|ed))
